--- a/.env
+++ b/.env
@@ -44,9 +44,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID="1358644"
-PUSHER_APP_KEY="661bc3c0e679dc50b275"
-PUSHER_APP_SECRET="0c070409cc195f548b54"
+PUSHER_APP_ID=""
+PUSHER_APP_KEY=""
+PUSHER_APP_SECRET=""
 PUSHER_APP_CLUSTER=eu
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
